assets/stylesheets/application.css
.git-icon {
    float: right;
    background: url('../images/git_icon.png') no-repeat center center;
    height: 24px;
    margin: 4px 0 0 4px;
    width: 67px;
    cursor: pointer;
    background-size: 58px 24px;
}

.git-options label {
    font-size: 10px;
    font-weight: 700;
    margin: 4px 0 2px;
    display: block;
}

.git-url {
    width: 100%;
    box-sizing: border-box;
    margin-bottom: 16px;
    border: 0;
    background: transparent;
    padding: 7px 0 5px 4px;
}

.clipboard {
    background-color: transparent;
    border: 0;
    top: 40px;
}

div.git {
    position: relative;
}

.clipboard {
    width: 9%;
    height: 30px;
    background: url('../images/fi-clipboard.svg') no-repeat;
    background-size: 24px 24px;
    background-position: center center;
    background-color: #bebebe;
    border: 0;
    top: 0;
    right: 0;
    float: right;
    position: absolute;
}

.clipboard-wrapper {
    position: relative;
    background: #edf0f3;
    border: 1px solid #e8eaec;
    height: 32px;
    margin-bottom: .5rem;
    box-sizing: border-box;
}

div.git .copy-input {
    padding: 7px 0 4px 20px;
    border: 0;
    background: none;
    text-align: left;
    display: block;
    width: 100%;
    box-sizing: border-box;
}

.git-options tr.changeset .committed_on, .git-options  tr.changeset .author {
    width: auto;
}

.git-options .left {
    clear: right;
    float: left;
    width: 49%;
    display: block;
}

.git-options .right {
    float: right;
    width: 49%;
}

.git-options .flash.error {
    clear: both;
    margin-top: 90px;
}

.revs.disabled {
    opacity: .5;
}

.revs {
    clear: both;
    padding-top: 20px;
}

.frame {
    width: 1px;
    height: 1px;
    overflow: hidden;
}

div.git h3 {
    background: url('../images/git_24.png') no-repeat left center;
    background-size: 17px 16px;
    padding-left: 20px;
}

.generate-spinner {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: rgba(0,0,0,.6);
    z-index: 1500;
}

.spin-text {
    text-align: center;
    font-size: 30px;
    color: rgba(255,255,255,.7);
}

/* SPINNER */
.spinner {
  margin: 100px auto;
  width: 200px;
  height: 220px;
  text-align: center;
  font-size: 10px;
}

.spinner > div {
  background-color: rgba(255,255,255,.7);
  height: 100%;
  width: 10px;
  margin: 0 10px;
  display: inline-block;
  animation: stretchdelay 1.2s infinite ease-in-out;
}

.spinner .rect2 {
  animation-delay: -1.1s;
}

.spinner .rect3 {
  animation-delay: -1s;
}

.spinner .rect4 {
  animation-delay: -.9s;
}

.spinner .rect5 {
  animation-delay: -.8s;
}

@keyframes stretchdelay {
  0%, 40%, 100% {
    transform: scaleY(.4);
  } 20% {
    transform: scaleY(1);
  }
}

.gitdownload-info {
    color: red;
    display: block;
}

@media screen and (max-width: 899px) {
    div.git .copy-input {
        padding: 4px 0 4px 20px;
    }
}

